fix javascript type

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Header from "../components/Header.astro";
 import ListEntry from "../components/ListEntry.astro";
 import PostSideBar from "../components/PostSideBar.astro";
 import Footer from "../components/Footer.astro";
-import SITE_DESCRIPTION from "../consts";
+import { SITE_DESCRIPTION } from "../consts";
 import { getCollection } from "astro:content";
 
 let posts = [];
