--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -152,7 +152,8 @@ img {
   height: auto;
 }
 
-p code {
+p code,
+li code {
   font-family: monospace;
   background-color: var(--ac-1);
   color: var(--ac-tx);
