change about me section on home page, fix link in now page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,10 +49,30 @@ posts = posts
       <section>
         <h2>Who am I?</h2>
         <p>
-          I'm Westley Winks. Learning is my passion and this website is one
-          manifestation of that.
+          My name is Westley Winks. I try to live my life with integrity by
+          living according to my core values:
         </p>
-
+        <ul>
+          <li>
+            <strong>Learning.</strong> I live for the pursuit of learning and it
+            gives my life meaning and purpose. I stay curious and am always looking
+            for new information and skills. For me, learning looks like <a
+              href="/books">reading books</a
+            >, <a href="https://github.com/Westley-Winks">coding</a>, solving
+            puzzles, reading blog posts, <a href="/writing">writing</a>, and
+            trying new things. One of my weaknesses is learning <em
+              >for the sake of learning</em
+            > and staying on the theoretical side of things instead of applying them.
+          </li>
+          <li>
+            <strong>Service to others.</strong> One of my roles in this life is to
+            compassionately serve others, supporting them and nurturing their growth.
+            I enjoy being known as &quot;the guy&quot; who people call, knowing that
+            I will put all my effort into helping them. Serving others looks like
+            <a href="/peace-corps">volunteering</a>, choosing the "support role"
+            in any game I play, and <a href="/writing">writing</a>.
+          </li>
+        </ul>
         <h2 id="contact">Can I contact you?</h2>
         <p>Please do. You can find me on the following:</p>
         <ul>
